--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,19 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Antonio:wght@500&family=League+Spartan&display=swap"
+      rel="stylesheet"
+    />
     <title>Planetas</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript
+      >Você precisa do JavaScript Habilitato para executar essa
+      páginaa.</noscript
+    >
     <div id="root"></div>
   </body>
 </html>
